<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hint_search">Enter Search Query</string>
    <string name="image_title_label">Image Title</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="more_info_placeholder_string">Golden Gate Park is the third most visited park in the United States. While the park is free to visit during the day, popular attractions charge admission, such as deYoung Museum, California Academy of Sciences and Conservatory of Flowers. The park is filled with gardens, museums, art, flowers, trees, lakes, birds and wildlife. There are also plenty of opportunities to participate in sports, clubs and other activities.</string>
    <string name="distance_unit">miles</string>
    <string name="navigateButtonName">Navigate</string>
    <string name="current_status_open">Currently Open</string>
    <string name="current_status_closed">Currently Closed</string>
    <string name="no_fees_string">No Fees</string>

    <string-array name="image_size_array">
        <item>any</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>

    <string-array name="image_color_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_type_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="title_activity_setting">Preference</string>

    <string name="hello_world">Hello world!</string>

</resources>
